--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -133,11 +133,16 @@ RUN set -ex; \
     apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false; \
     rm -rf /var/lib/apt/lists/*
 
+
+RUN mkdir -p /etc/phpmyadmin && \
+    chown :root /etc/phpmyadmin
+
 # Copy configuration
 COPY config.inc.php /etc/phpmyadmin/config.inc.php
 
 # Copy main script
 COPY docker-entrypoint.sh /docker-entrypoint.sh
+
 RUN chown :root /docker-entrypoint.sh
 
 ENTRYPOINT [ "/docker-entrypoint.sh" ]
